for vercal deployement chamges

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.3",
     "nodemailer": "^7.0.5",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "serverless-http": "^3.2.0"
   }
 }
